Add absolute resources path and generate CA certs on startup any time